laborations/lab2/testsuite/good/core020.cc
void bar() {
	return foo();
}

int main () {
  bar() ;
  foo() ;
  return 0 ;

}
void foo() {

}

