laborations/lab2/testsuite/bad/void-argument.cc
void arg(void par) { }

int main() {
  return 0;
}
